Modificando o nome da pagina inicio para index

--- a/html/index.html
+++ b/html/index.html
@@ -11,13 +11,13 @@
     <link rel="stylesheet" href="../css/generico/base_responsiva/cabecalho.css">
     <link rel="stylesheet" href="../css/generico/base/rodape.css">
     <link rel="stylesheet" href="../css/generico/base_responsiva/rodape.css">
-    <link rel="stylesheet" href="../css/generico/componentes/botao/botao_pagina_inicio.css">
-    <link rel="stylesheet" href="../css/pagina/style_inicio.css">
-    <link rel="stylesheet" href="../css/pagina_responsiva/responsivo_inicio.css">
+    <link rel="stylesheet" href="../css/generico/componentes/botao/botao_pagina_index.css">
+    <link rel="stylesheet" href="../css/pagina/style_index.css">
+    <link rel="stylesheet" href="../css/pagina_responsiva/responsivo_index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
-    <title class="pagina" aria-valuetext="inicio">inicio</title>
+    <title class="pagina" aria-valuetext="index">Inicio</title>
 </head>
 
 <body>
@@ -31,7 +31,7 @@
 
                 <ul class="navegacao__lista">
 
-                    <li class="item"><a class="item__imagem--casa" href="inicio.html"><img src="../image/Casa.png" alt="Botão para voltar ao início da página"></a></li>
+                    <li class="item"><a class="item__imagem--casa" href="index.html"><img src="../image/Casa.png" alt="Botão para voltar ao início da página"></a></li>
                     <li class="item"><a class="item__imagem--mensagem" href="#"><img src="../image/Mensagens.png"></a></li>
 
                 </ul>
@@ -84,7 +84,7 @@
 
     </div>
 
-    <script type="module" src="../js/controllers/InicioController.js"></script>
+    <script type="module" src="../js/controllers/indexController.js"></script>
     
 </body>
 </html>
