--- a/html/cadastro.html
+++ b/html/cadastro.html
@@ -75,7 +75,7 @@
                     <div class="campo" data-campo>
 
                         <label data-label class="campo__label" for="email">Email</label>
-                        <input data-input="email" class="campo__input" type="email" placeholder="Escolha seu melhor email"
+                        <input data-input="email" class="campo__input" type="text" placeholder="Escolha seu melhor email"
                          id="email" name="email" pattern="^[a-zA-Z\w\d!@#$%&*+-._]+@([a-zA-Z\d]+(.[a-zA-Z\d]+)+)$"
                          required>
 
@@ -85,8 +85,8 @@
                     <div class="campo" data-campo>
 
                         <label data-label class="campo__label" for="nome">Nome</label>
-                        <input data-input="nome" class="campo__input" type="nome" placeholder="Digite seu nome completo" id="nome" name="nome"
-                        pattern="^(\s*[a-zA-Z]{2,}\s*)+$" required>
+                        <input data-input="nome" class="campo__input" type="text" placeholder="Digite seu nome completo" name="nome"
+                        id="nome" pattern="^(\s*[a-zA-Z]{2,}\s*)+$" required>
 
                          <span data-alerta class="alerta"></span>
                     </div>
@@ -111,7 +111,7 @@
 
                 </form>
                 
-                <button onclick="redirecionaController.redireciona()" class="botao" type="submit" name="botao" id="botao">Salvar</button>
+                <button class="botao" type="submit" name="botao" id="botao">Salvar</button>
             </section>
         </article>
     </main>
