Funcionalidade de logar usuário terminada com sucesso. Arquivos para criptografar e gerenciar o localStorage para armazenar os dados com segurança foram criados. Outras modificações na API foram feitas para solucionar erros     que apareceram durante o processo. É possível observar outros detalhes de modificação realizados em alguns outros arquivos. Mas não muitos.

--- a/html/login.html
+++ b/html/login.html
@@ -85,7 +85,7 @@
                     </div>
                 </form>
 
-                <button onclick="redirecionaController.redireciona()" class="botao" type="submit" name="botao" id="botao">Entrar</button>
+                <button class="botao" type="submit" name="botao" id="botao">Entrar</button>
             </section>
         </article>
     </main>
