--- a/html/perfil.html
+++ b/html/perfil.html
@@ -92,8 +92,7 @@
                         <div data-campo class="campo">
 
                             <label data-label class="campo__label" for="telefone">Telefone</label>
-                            <input data-input="telefone" class="campo__input" type="tel" name="telefone" id="telefone"
-                            pattern="^(\d{2})\s*(\d{5}[-_\s]*\d{4})$" required placeholder="Insira seu número de celular">
+                            <input data-input="telefone" class="campo__input" type="tel" name="telefone" id="telefone" required placeholder="Insira seu número de celular">
 
                             <span data-alerta class="alerta"></span>
                         </div>
@@ -107,6 +106,15 @@
                             <span data-alerta class="alerta"></span>
                         </div>
 
+                        <div data-campo class="campo">
+
+                            <label data-label class="campo__label" for="uf">UF</label>
+                            <input data-input="uf" class="campo__input" type="text" name="uf" id="uf"
+                            pattern="^(\s*[a-zA-Z]{2,}\s*)+$" required placeholder="Digite aqui seu uf">
+
+                            <span data-alerta class="alerta"></span>
+                        </div>
+
                         <div class="campo">
 
                             <label class="campo__label" for="sobre">Sobre</label>
@@ -116,7 +124,7 @@
                         </div>
                     </form>
 
-                <button onclick="redirecionaController.redireciona()" class="botao" type="submit" name="botao" id="botao">Salvar</button>
+                <button class="botao" type="submit" name="botao" id="botao">Salvar</button>
                 </section>
             </div>
         </article>
@@ -151,6 +159,7 @@
     <script src="../js/service/RedirecionaFactory.js"></script>
     <script src="../js/controllers/RedirecionaController.js"></script>
     <script type="module" src="../js/controllers/perfilEhMensagemController.js"></script>
+    <script type="module" src="../js/controllers/perfilController.js"></script>
     <script>
         var janela = new Janela();
         var redirecionaController = new RedirecionaController();
