Foi preciso uma refatoração para evitar a criação de outras entidades com os mesmos códigos.

--- a/html/perfil.html
+++ b/html/perfil.html
@@ -69,7 +69,7 @@
                             <label data-label class="campo__label" for="foto">Foto</label>
 
                             <div class="grupo_foto">
-                                <img class="grupo_foto___img" src="../image/Ellipse 2.png" name="foto" id="foto">
+                                <img class="grupo_foto___img" src="" name="foto" id="foto" alt="">
                             </div>
                         </div>
 
