--- a/html/animal.html
+++ b/html/animal.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="../css/generico/componentes/formulario/form_perfil-mensagem.css">
     <link rel="stylesheet" href="../css/generico/componentes/campo-label-input/campo-label-input_animal.css">
     <link rel="stylesheet" href="../css/generico/componentes/janela/janela.css">
+    <link rel="stylesheet" href="../css/generico/componentes/estilizacao_de_erros/style_erros.css">
     <link rel="stylesheet" href="../css/generico_responsivo/componente_responsivo/janela_rsponsiva/janela_responsiva.css">
     <link rel="stylesheet" href="../css/pagina/style_editar_perfil.css">
     <link rel="stylesheet" href="../css/pagina/style_perfil-mensagem.css">
@@ -70,7 +71,7 @@
 
                             <label class="grupo_foto" for="file">
                                 <input type="file" name="file" id="file">
-                                <img class="grupo_foto___img" src="" name="foto" id="foto">
+                                <img class="grupo_foto___img" src="" name="foto" id="foto" alt="">
                             </label>
                         </div>
 
@@ -122,7 +123,7 @@
                                     <option value="Dócil">Dócil</option>
                                 </select>
 
-                                <select data-input="comportamento" class="campo__input comportamento" id="comportamento2" name="comportamento" required>
+                                <select data-input="comportamento" class="campo__input comportamento" id="comportamento2" name="comportamento" pattern="^[a-zA-Z]$" required>
                                     <option disabled selected>--Selecionar--</option>
                                     <option value="Amoroso(a)">Amoroso(a)</option>
                                     <option value="Carinhoso(a)">Carinhoso(a)</option>
@@ -153,13 +154,12 @@
                         </div>
 
                         <div class="campo">
-                            <label class="campo__label" for="sobre">UF</label>
+                            <label class="campo__label" for="sobre">Sobre o pet</label>
                             <textarea class="campo__textarea" cols="40" rows="11" type="textarea" 
                             name="sobre" id="sobre" placeholder="Conte algo sobre seu pet"></textarea>
-
                         </div>
                     </form>
-                <button class="botao" type="submit" name="botao" id="botao">Salvar</button>
+                <button class="botao" type="submit" name="botao" id="btn-salvar">Salvar</button>
                 </section>
             </div>
         </article>
@@ -184,6 +184,7 @@
             <p onclick="janela.remove()" id="pop-up__botao">OK</p>
         </span>
     </div>
+
     <script src="../js/helper/AlertaHelper.js"></script>
     <script src="../js/helper/ValidacaoHelper.js"></script>
     <script src="../js/modules/Mensagem.js"></script>
@@ -194,7 +195,7 @@
     <script src="../js/service/RedirecionaFactory.js"></script>
     <script src="../js/controllers/RedirecionaController.js"></script>
     <script type="module" src="../js/controllers/perfilEhMensagemController.js"></script>
-    <script type="module" src="../js/controllers/editarPerfilController.js"></script>
+    <script type="module" src="../js/controllers/animalController.js"></script>
     <script>
         var janela = new Janela();
         var redirecionaController = new RedirecionaController();
