--- a/html/animal.html
+++ b/html/animal.html
@@ -196,6 +196,7 @@
     <script src="../js/controllers/RedirecionaController.js"></script>
     <script type="module" src="../js/controllers/perfilEhMensagemController.js"></script>
     <script type="module" src="../js/controllers/animalController.js"></script>
+    <script type="module" src="../js/entities/AnimalEntities.js"></script>
     <script>
         var janela = new Janela();
         var redirecionaController = new RedirecionaController();
