Adicionado um botao na pagina de perfil chamado adicionar animal. Ele vai redirecionar a pagina.

--- a/html/animais.html
+++ b/html/animais.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="../css/generico/base/cabecalho.css">
     <link rel="stylesheet" href="../css/generico/base_responsiva/cabecalho.css">
     <link rel="stylesheet" href="../css/generico/base/rodape.css">
+    <link rel="stylesheet" href="../css/generico/componentes/card-animal/style.css">
     <link rel="stylesheet" href="../css/generico/base_responsiva/rodape_animais.css">
     <link rel="stylesheet" href="../css/generico/base/conteiner.css">
     <link rel="stylesheet" href="../css/pagina/style_animais.css">
