--- a/html/perfil.html
+++ b/html/perfil.html
@@ -16,7 +16,9 @@
     <link rel="stylesheet" href="../css/generico/componentes/campo-label-input/campo_perfil.css">
     <link rel="stylesheet" href="../css/generico/componentes/estilizacao_de_erros/style_erros.css">
     <link rel="stylesheet" href="../css/generico/componentes/janela/janela.css">
+    <link rel="stylesheet" href="../css/generico/componentes/card-animal/style.css">
     <link rel="stylesheet" href="../css/generico_responsivo/componente_responsivo/janela_rsponsiva/janela_responsiva.css">
+    <link rel="stylesheet" href="../css/generico_responsivo/card/style.css">
     <link rel="stylesheet" href="../css/pagina/style_perfil.css">
     <link rel="stylesheet" href="../css/pagina/style_perfil-mensagem.css">
     <link rel="stylesheet" href="../css/pagina_responsiva/responsivo_perfil-mensagem.css">
@@ -104,6 +106,12 @@
             </div>
         </article>
     </main>
+
+    <section>
+        <h3 class="titulo-animais-cadastrado">Animais cadastrados</h3>
+        <p class="abc"><a class="btn btn-texto btn-adicionar" href="animal.html">+ Adicionar um animal</a></p>
+        <div class="catalogo" id="catalogo"></div>
+    </section></p>
 
     <div class="secao4">
 
