--- a/html/animal.html
+++ b/html/animal.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="../css/generico_responsivo/componente_responsivo/janela_rsponsiva/janela_responsiva.css">
     <link rel="stylesheet" href="../css/pagina/style_editar_perfil.css">
     <link rel="stylesheet" href="../css/pagina/style_perfil-mensagem.css">
+    <link rel="stylesheet" href="../css/pagina/style_animal.css">
     <link rel="stylesheet" href="../css/pagina_responsiva/responsivo_animal.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -159,7 +160,15 @@
                             name="sobre" id="sobre" placeholder="Conte algo sobre seu pet"></textarea>
                         </div>
                     </form>
-                <button class="botao" type="submit" name="botao" id="btn-salvar">Salvar</button>
+
+                    <ul class="lista-botoes" id="lista-botoes">
+                        <li>
+                            <button class="botao" type="submit" name="botao" id="btn-salvar">Salvar</button>
+                        </li>
+                        <li>
+                            <button class="botao" name="botao" id="btn-cancelar">Cancelar</button>
+                        </li>
+                    </ul>
                 </section>
             </div>
         </article>
