A funcionalidade dos botões de deletar, adicionar e atualizar estão rodando bem.

--- a/html/animal.html
+++ b/html/animal.html
@@ -166,7 +166,7 @@
                             <button class="botao" type="submit" name="botao" id="btn-salvar">Salvar</button>
                         </li>
                         <li>
-                            <button class="botao" name="botao" id="btn-cancelar">Cancelar</button>
+                            <button class="botao" name="botao" id="btn-voltar">Voltar</button>
                         </li>
                     </ul>
                 </section>
