--- a/html/perfil.html
+++ b/html/perfil.html
@@ -107,18 +107,15 @@
         </article>
     </main>
 
-    <section>
-        <h3 class="titulo-animais-cadastrado">Animais cadastrados</h3>
+    <section id="alterna-titulo">
         <p class="abc"><a class="btn btn-texto btn-adicionar" href="animal.html">+ Adicionar um animal</a></p>
         <div class="catalogo" id="catalogo"></div>
     </section></p>
 
     <div class="secao4">
-
         <footer class="rodape">
             <p>2022 - Desenvolvido pelo @wesley-surt.</p>
         </footer>
-
     </div>
 
     <script type="module" src="../js/controllers/perfilController.js"></script>
