Corrigi bug que estava impedindo o login e o carregamento da pagina de animais

--- a/html/perfil.html
+++ b/html/perfil.html
@@ -101,7 +101,8 @@
                         </div>
                     </form>
 
-                <button class="botao" type="button" name="botao" id="botao">Editar</button>
+                    <button class="botao" type="button" name="botao" id="btn-editar">Editar</button>
+                    <button class="botao" type="button" name="botao" id="btn-deletar">Deletar</button>
                 </section>
             </div>
         </article>
