--- a/html/editar-perfil.html
+++ b/html/editar-perfil.html
@@ -84,25 +84,52 @@
 
                         <div data-campo class="campo">
                             <label data-label class="campo__label" for="telefone">Telefone</label>
+
+                            <ul class="lista--cidades" id="lista--cidades"></ul>
                             <input data-input="telefone" class="campo__input" type="tel" name="telefone" id="telefone" required placeholder="Insira seu número de celular">
 
                             <span data-alerta class="alerta"></span>
                         </div>
 
                         <div data-campo class="campo">
-                            <label data-label class="campo__label" for="cidade">Cidade</label>
-                            <input data-input="cidade" class="campo__input" type="text" name="cidade" id="cidade"
-                            pattern="^(\s*[a-zA-Z]{2,}\s*)+$" required placeholder="Digite aqui sua cidade">
-
-                            <span data-alerta class="alerta"></span>
+                            <label data-label class="campo__label" for="uf">UF</label>
+                            <select data-input="uf" data-uf class="campo__input" name="uf" id="uf" required>
+                                <option value="">Digite um estado</option>
+                                <option value="68">Acre</option>
+                                <option value="82">Alagoas</option>
+                                <option value="96">Amapá</option>
+                                <option value="92">Amazonas</option>
+                                <option value="71">Bahia</option>
+                                <option value="85">Ceará</option>
+                                <option value="61">Distrito Federal</option>
+                                <option value="27">Espírito Santo</option>
+                                <option value="62">Goiás</option>
+                                <option value="98">Maranhão</option>
+                                <option value="65">Mato Grosso</option>
+                                <option value="67">Mato Grosso do Sul</option>
+                                <option value="31">Minas Gerais</option>
+                                <option value="91">Pará</option>
+                                <option value="83">Paraíba</option>
+                                <option value="41">Paraná</option>
+                                <option value="81">Pernambuco</option>
+                                <option value="86">Piauí</option>
+                                <option value="21">Rio de Janeiro</option>
+                                <option value="84">Rio Grande do Norte</option>
+                                <option value="51">Rio Grande do Sul</option>
+                                <option value="69">Rondônia</option>
+                                <option value="95">Roraima</option>
+                                <option value="48">Santa Catarina</option>
+                                <option value="11">São Paulo</option>
+                                <option value="79">Sergipe</option>
+                                <option value="63">Tocantins</option>
+                            </select>
                         </div>
 
-                        <div data-campo class="campo">
-                            <label data-label class="campo__label" for="uf">UF</label>
-                            <input data-input="uf" class="campo__input" type="text" name="uf" id="uf"
-                            pattern="^(\s*[a-zA-Z]{2,}\s*)+$" required placeholder="Digite aqui seu uf">
-
-                            <span data-alerta class="alerta"></span>
+                        <div data-campo data-cidade class="campo">
+                            <label data-label class="campo__label" for="cidade">Cidade</label>
+                            
+                            <input data-input="cidade" class="campo__input" type="text" name="cidade" id="cidade"
+                            pattern="^(\s*[a-zA-Z]{2,}\s*)+$" required placeholder="Digite aqui sua cidade">
                         </div>
 
                         <div class="campo">
