Melhorando a exibição do estado na pagina de editar perfil

--- a/html/editar-perfil.html
+++ b/html/editar-perfil.html
@@ -129,7 +129,7 @@
                             <label data-label class="campo__label" for="cidade">Cidade</label>
                             
                             <input data-input="cidade" class="campo__input" type="text" name="cidade" id="cidade"
-                            pattern="^(\s*[a-zA-Z]{2,}\s*)+$" required placeholder="Digite aqui sua cidade">
+                            pattern="^(\s*[a-zA-Z]{2,}\s*)+$" placeholder="Digite aqui sua cidade" required disabled>
                         </div>
 
                         <div class="campo">
