Elaborei uma filtragem por animais dinamicamente. Também criei o guarda de rotas

--- a/html/mensagem.html
+++ b/html/mensagem.html
@@ -140,6 +140,7 @@
         var janela = new Janela();
         var redirecionaController = new RedirecionaController();
     </script>
+    <script type="module" src="../js/helper/routeGuard.js"></script>
     
 </body>
 </html>
