--- a/html/perfil.html
+++ b/html/perfil.html
@@ -120,5 +120,6 @@
     </div>
 
     <script type="module" src="../js/controllers/perfilController.js"></script>
+    <script type="module" src="../js/helper/routeGuard.js"></script>
 </body>
 </html>
