--- a/html/animais.html
+++ b/html/animais.html
@@ -48,13 +48,35 @@
                 
                 <div class="campo_de_busca">
                     <label class="label_filtro">Filtrar por região</label>
-
-                    <select class="filtrar" data-campoFiltro>
+                    <select data-campoFiltro data-input="uf" data-uf class="campo__input filtrar" name="uf" id="uf" required>
                         <option value="">Mostrar Todos</option>
-                        <option value="">Rio de Janeiro (RJ)</option>
-                        <option value="">Nova Iguaçu (RJ)</option>
-                        <option value="">Duque de Caxias (RJ)</option>
-                        <option value="">São Gonçalo (RJ)</option>
+                        <option value="68">Acre</option>
+                        <option value="82">Alagoas</option>
+                        <option value="96">Amapá</option>
+                        <option value="92">Amazonas</option>
+                        <option value="71">Bahia</option>
+                        <option value="85">Ceará</option>
+                        <option value="61">Distrito Federal</option>
+                        <option value="27">Espírito Santo</option>
+                        <option value="62">Goiás</option>
+                        <option value="98">Maranhão</option>
+                        <option value="65">Mato Grosso</option>
+                        <option value="67">Mato Grosso do Sul</option>
+                        <option value="31">Minas Gerais</option>
+                        <option value="91">Pará</option>
+                        <option value="83">Paraíba</option>
+                        <option value="41">Paraná</option>
+                        <option value="81">Pernambuco</option>
+                        <option value="86">Piauí</option>
+                        <option value="21">Rio de Janeiro</option>
+                        <option value="84">Rio Grande do Norte</option>
+                        <option value="51">Rio Grande do Sul</option>
+                        <option value="69">Rondônia</option>
+                        <option value="95">Roraima</option>
+                        <option value="48">Santa Catarina</option>
+                        <option value="11">São Paulo</option>
+                        <option value="79">Sergipe</option>
+                        <option value="63">Tocantins</option>
                     </select>
                 </div>
             </section>
@@ -72,5 +94,6 @@
     </div>
 
     <script type="module" src="../js/controllers/animaisController.js"></script>
+    <script type="module" src="../js/helper/routeGuard.js"></script>
 </body>
 </html>
