--- a/html/animal.html
+++ b/html/animal.html
@@ -235,6 +235,7 @@
         var janela = new Janela();
         var redirecionaController = new RedirecionaController();
     </script>
+    <script type="module" src="../js/helper/routeGuard.js"></script>
 
 </body>
 </html>
