--- a/html/editar-perfil.html
+++ b/html/editar-perfil.html
@@ -179,6 +179,7 @@
         var janela = new Janela();
         var redirecionaController = new RedirecionaController();
     </script>
+    <script type="module" src="../js/helper/routeGuard.js"></script>
 
 </body>
 </html>
