--- a/html/cadastro.html
+++ b/html/cadastro.html
@@ -151,6 +151,7 @@
         var janela = new Janela();
         var redirecionaController = new RedirecionaController();
     </script>
+    <script type="module" src="../js/helper/ChecksExistingEmail.js"></script>
 
 </body>
 </html>
