--- a/html/editar-perfil.html
+++ b/html/editar-perfil.html
@@ -175,11 +175,10 @@
     <script src="../js/controllers/RedirecionaController.js"></script>
     <script type="module" src="../js/controllers/perfilEhMensagemController.js"></script>
     <script type="module" src="../js/controllers/editarPerfilController.js"></script>
-    <script>
+    <script type="module">
         var janela = new Janela();
         var redirecionaController = new RedirecionaController();
     </script>
     <script type="module" src="../js/helper/routeGuard.js"></script>
-
-</body>
+    </body>
 </html>
