mudando para poder mergir

--- a/html/editar-perfil.html
+++ b/html/editar-perfil.html
@@ -145,6 +145,8 @@
         </article>
     </main>
 
+    <canvas id="canvas"></canvas>
+
     <div class="secao4">
 
         <footer class="rodape">
