Na tela de perfil o campo cep está exibindo o dado perfeitamente.

--- a/html/profile.html
+++ b/html/profile.html
@@ -70,13 +70,18 @@
                         </div>
 
                         <div data-campo class="campo">
-                            <label data-label class="campo__label" for="cidade">Cidade</label>
-                            <p data-input="cidade" class="caixa_texto" name="cidade" id="cidade"></p>
+                            <label data-label class="campo__label" for="cep">CEP</label>
+                            <p data-input="cep" class="caixa_texto" name="cep" id="cep"></p>
                         </div>
 
                         <div class="campo">
                             <label class="campo__label" for="uf">UF</label>
                             <p data-input="cidade" class="caixa_texto" name="uf" id="uf"></p>
+                        </div>
+
+                        <div data-campo class="campo">
+                            <label data-label class="campo__label" for="cidade">Cidade</label>
+                            <p data-input="cidade" class="caixa_texto" name="cidade" id="cidade"></p>
                         </div>
 
                         <div class="campo">
