A pagina de editar perfil estś com o formato de foto de perfil correto. A foto está circular.

--- a/html/edit_profile.html
+++ b/html/edit_profile.html
@@ -57,7 +57,7 @@
 
                             <label class="grupo_foto" for="file">
                                 <input type="file" name="file" id="file">
-                                <img class="grupo_foto___img" src="" name="foto" id="foto">
+                                <img data-fotoPerfil class="grupo_foto___img foto--circular" src="" name="foto" id="foto">
                             </label>
                         </div>
 
