Fiz modificações na imagem da foto de perfil do usuario e do animal. Adicionei o alerta helper na pagina de editar perfil.

--- a/html/profile.html
+++ b/html/profile.html
@@ -55,7 +55,7 @@
                             <label data-label class="campo__label" for="foto">Foto</label>
 
                             <div class="grupo_foto">
-                                <img class="grupo_foto___img" src="" name="foto" id="foto" alt="">
+                                <img class="grupo_foto___img foto--circular" src="" name="foto" id="foto" alt="">
                             </div>
                         </div>
 
@@ -91,7 +91,6 @@
                     </form>
 
                     <button class="botao" type="button" name="botao" id="btn-editar">Editar</button>
-                    <button class="botao" type="button" name="botao" id="btn-deletar">Deletar</button>
                 </section>
             </div>
         </article>
