--- a/html/edit_profile.html
+++ b/html/edit_profile.html
@@ -72,7 +72,7 @@
                         <div data-campo class="campo">
                             <label data-label class="campo__label" for="telefone">Telefone</label>
 
-                            <input data-input="telefone" class="campo__input" type="tel" name="telefone" id="telefone" required placeholder="Insira seu número de celular">
+                            <input data-input="telefone" class="campo__input" type="tel" name="telefone" id="telefone" pattern="^([0-9]){11}$" required placeholder="Insira seu número de celular">
 
                             <span data-alerta class="alerta"></span>
                         </div>
@@ -80,7 +80,9 @@
                         <div data-campo class="campo">
                             <label data-label class="campo__label" for="cep">CEP</label>
                             <input data-input="cep" class="campo__input"  name="cep" id="cep"
-                            placeholder="Digite seu CEP" required>
+                            pattern="^([0-9]){8}$" placeholder="Digite seu CEP" required>
+
+                            <span data-alerta class="alerta"></span>
                         </div>
 
                         <div data-campo class="campo">
@@ -100,9 +102,12 @@
                             <textarea class="campo__textarea" cols="40" rows="11" type="textarea" 
                             name="sobre" id="sobre" placeholder="Conte algo sobre você"></textarea>
 
+                            <span data-alerta class="alerta"></span>
                         </div>
                     </form>
-                <button class="botao" type="submit" name="botao" id="botao">Salvar</button>
+
+                    <button class="botao" type="submit" name="botao" id="botao">Salvar</button>
+                    <button class="botao" type="button" name="botao" id="btn-deletar">Deletar</button>
                 </section>
             </div>
         </article>
@@ -137,13 +142,8 @@
     <script src="../js/views/ListaMensagens.js"></script>
     <script src="../js/views/MensagemView.js"></script>
     <script src="../js/services/RedirecionaFactory.js"></script>
-    <script src="../js/controllers/RedirecionaController.js"></script>
     <script type="module" src="../js/controllers/profileMessageController.js"></script>
     <script type="module" src="../js/controllers/editProfileController.js"></script>
-    <script type="module">
-        var janela = new Janela();
-        var redirecionaController = new RedirecionaController();
-    </script>
     <script type="module" src="../js/helpers/routeGuard.js"></script>
 
 </body>
