--- a/html/edit_profile.html
+++ b/html/edit_profile.html
@@ -107,6 +107,7 @@
                     </form>
 
                     <button class="botao" type="submit" name="botao" id="botao">Salvar</button>
+                    <button class="botao" name="botao" id="btn-voltar">Voltar</button>
                     <button class="botao" type="button" name="botao" id="btn-deletar">Deletar</button>
                 </section>
             </div>
