--- a/html/edit_profile.html
+++ b/html/edit_profile.html
@@ -106,7 +106,7 @@
                         </div>
                     </form>
 
-                    <button class="botao" type="submit" name="botao" id="botao">Salvar</button>
+                    <button class="botao" type="submit" name="botao" id="btn-salvar">Salvar</button>
                     <button class="botao" name="botao" id="btn-voltar">Voltar</button>
                     <button class="botao" type="button" name="botao" id="btn-deletar">Deletar</button>
                 </section>
@@ -114,26 +114,18 @@
         </article>
     </main>
 
-    <canvas id="canvas"></canvas>
-
     <div class="secao4">
-
         <footer class="rodape">
             <p>2022 - Desenvolvido pelo @wesley-surt.</p>
         </footer>
-
     </div>
 
-    <div class="janela">
-
-        <span class="janela__pop-up">
-
-            <p class="pop-up__texto">
-                Preencha corretamente todos os campos para continuar.
-            </p>
-        
-            <p onclick="janela.remove()" id="pop-up__botao">OK</p>
-        </span>
+    <dialog>
+        <h1 class="modal__title">Atenção</h1>
+        <p class="modal__paragraph">Você precisa preencher todas as informações corretamente para salvar.</p>
+        <button class="modal__button" id="modal_close">ok</button>
+    </dialog>
+    
     </div>
     <script src="../js/helpers/AlertaHelper.js"></script>
     <script src="../js/helpers/ValidacaoHelper.js"></script>
@@ -143,6 +135,7 @@
     <script src="../js/views/ListaMensagens.js"></script>
     <script src="../js/views/MensagemView.js"></script>
     <script src="../js/services/RedirecionaFactory.js"></script>
+    <script src="../js/components/Dialog.js"></script>
     <script type="module" src="../js/controllers/profileMessageController.js"></script>
     <script type="module" src="../js/controllers/editProfileController.js"></script>
     <script type="module" src="../js/helpers/routeGuard.js"></script>
