--- a/html/animals.html
+++ b/html/animals.html
@@ -41,33 +41,33 @@
                     <label class="label_filtro">Filtrar por região</label>
                     <select data-campoFiltro data-input="uf" data-uf class="campo__input filtrar" name="uf" id="uf" required>
                         <option value="">Mostrar Todos</option>
-                        <option value="68">Acre</option>
-                        <option value="82">Alagoas</option>
-                        <option value="96">Amapá</option>
-                        <option value="92">Amazonas</option>
-                        <option value="71">Bahia</option>
-                        <option value="85">Ceará</option>
-                        <option value="61">Distrito Federal</option>
-                        <option value="27">Espírito Santo</option>
-                        <option value="62">Goiás</option>
-                        <option value="98">Maranhão</option>
-                        <option value="65">Mato Grosso</option>
-                        <option value="67">Mato Grosso do Sul</option>
-                        <option value="31">Minas Gerais</option>
-                        <option value="91">Pará</option>
-                        <option value="83">Paraíba</option>
-                        <option value="41">Paraná</option>
-                        <option value="81">Pernambuco</option>
-                        <option value="86">Piauí</option>
-                        <option value="21">Rio de Janeiro</option>
-                        <option value="84">Rio Grande do Norte</option>
-                        <option value="51">Rio Grande do Sul</option>
-                        <option value="69">Rondônia</option>
-                        <option value="95">Roraima</option>
-                        <option value="48">Santa Catarina</option>
-                        <option value="11">São Paulo</option>
-                        <option value="79">Sergipe</option>
-                        <option value="63">Tocantins</option>
+                        <option value="AC">Acre</option>
+                        <option value="AL">Alagoas</option>
+                        <option value="AP">Amapá</option>
+                        <option value="AM">Amazonas</option>
+                        <option value="BA">Bahia</option>
+                        <option value="CE">Ceará</option>
+                        <option value="DF">Distrito Federal</option>
+                        <option value="ES">Espírito Santo</option>
+                        <option value="GO">Goiás</option>
+                        <option value="MA">Maranhão</option>
+                        <option value="MT">Mato Grosso</option>
+                        <option value="MS">Mato Grosso do Sul</option>
+                        <option value="MG">Minas Gerais</option>
+                        <option value="PA">Pará</option>
+                        <option value="PB">Paraíba</option>
+                        <option value="PR">Paraná</option>
+                        <option value="PE">Pernambuco</option>
+                        <option value="PI">Piauí</option>
+                        <option value="RJ">Rio de Janeiro</option>
+                        <option value="RN">Rio Grande do Norte</option>
+                        <option value="RS">Rio Grande do Sul</option>
+                        <option value="RO">Rondônia</option>
+                        <option value="RR">Roraima</option>
+                        <option value="SC">Santa Catarina</option>
+                        <option value="SP">São Paulo</option>
+                        <option value="SE">Sergipe</option>
+                        <option value="TO">Tocantins</option>
                     </select>
                 </div>
             </section>
