Fiz as imagens voltarem a aparecer

--- a/html/animal.html
+++ b/html/animal.html
@@ -32,10 +32,10 @@
         </nav>
 
         <div class="imagem--ellipse"></div>
-
+        <img class="imagem--usuario">
+        <div class="forma2"></div>
     </header>
     
-    <div class="forma2"></div>
 
     </main>
         <article class="conteiner">
@@ -183,6 +183,7 @@
     <script src="../js/views/MensagemView.js"></script>
     <script src="../js/services/RedirecionaFactory.js"></script>
     <script src="../js/components/Dialog.js"></script>
+    <script type="module" src="../js/components/imageUser.js"></script>
     <script type="module" src="../js/controllers/profileMessageController.js"></script>
     <script type="module" src="../js/controllers/animalController.js"></script>
     <script type="module" src="../js/entities/AnimalEntities.js"></script>
