--- a/html/animals.html
+++ b/html/animals.html
@@ -29,7 +29,8 @@
         </nav>
 
         <div class="forma2"></div>
-        <div class="imagem--usuario"></div>
+        <img class="imagem--usuario">
+        <div class="imagem--ellipse"></div>
     </header>
 
     <main>
@@ -86,5 +87,6 @@
 
     <script type="module" src="../js/controllers/animalsController.js"></script>
     <script type="module" src="../js/helpers/routeGuard.js"></script>
+    <script type="module" src="../js/components/imageUser.js"></script>
 </body>
 </html>
