--- a/html/profile.html
+++ b/html/profile.html
@@ -31,10 +31,11 @@
         </nav>
 
         <div class="imagem--ellipse"></div>
+        <img class="imagem--usuario">
+        <div class="forma2"></div>
 
     </header>
     
-    <div class="forma2"></div>
 
     </main>
         <article class="conteiner">
@@ -109,5 +110,6 @@
 
     <script type="module" src="../js/controllers/profileController.js"></script>
     <script type="module" src="../js/helpers/routeGuard.js"></script>
+    <script type="module" src="../js/components/imageUser.js"></script>
 </body>
 </html>
