Concertei a aparição da imagem de perfil sem foto em miniatura. Ela não estava sendo exibida da maneira correta. Modifiquei a cor de alguns botões para verde e ajustei o css para que o botão e o texto que ficam um do lado do outro na pagina de perfil para que fissem exatamente lado a lado

--- a/html/animal.html
+++ b/html/animal.html
@@ -31,8 +31,7 @@
             </div>
         </nav>
 
-        <div class="imagem--ellipse"></div>
-        <img class="imagem--usuario">
+        <img class="imagem--usuario" id="ellipse">
         <div class="forma2"></div>
     </header>
     
@@ -152,8 +151,8 @@
                         </div>
                     </form>
 
-                    <button class="botao" type="submit" name="botao" id="btn-salvar">Salvar</button>
-                    <button class="botao" name="botao" id="btn-voltar">Voltar</button>
+                    <button class="botao btn-verde" type="submit" name="botao" id="btn-salvar">Salvar</button>
+                    <button class="botao" name="botao" id="btn-voltar">Cancelar</button>
                 </section>
             </div>
         </article>
