--- a/html/animals.html
+++ b/html/animals.html
@@ -29,8 +29,7 @@
         </nav>
 
         <div class="forma2"></div>
-        <img class="imagem--usuario">
-        <div class="imagem--ellipse"></div>
+        <img class="imagem--usuario" id="ellipse">
     </header>
 
     <main>
