--- a/html/edit_profile.html
+++ b/html/edit_profile.html
@@ -31,11 +31,9 @@
             </div>
         </nav>
 
-        <div class="imagem--ellipse"></div>
-
+        <div class="forma2"></div>
     </header>
     
-    <div class="forma2"></div>
 
     </main>
         <article class="conteiner">
@@ -106,9 +104,9 @@
                         </div>
                     </form>
 
-                    <button class="botao" type="submit" name="botao" id="btn-salvar">Salvar</button>
-                    <button class="botao" name="botao" id="btn-voltar">Voltar</button>
-                    <button class="botao" type="button" name="botao" id="btn-deletar">Deletar</button>
+                    <button class="botao btn-verde" type="submit" name="botao" id="btn-salvar">Salvar</button>
+                    <button class="botao" name="botao" id="btn-voltar">Cancelar</button>
+                    <button class="botao" type="button" name="botao" id="btn-deletar">Excluir</button>
                 </section>
             </div>
         </article>
