--- a/html/profile.html
+++ b/html/profile.html
@@ -30,8 +30,7 @@
             </div>
         </nav>
 
-        <div class="imagem--ellipse"></div>
-        <img class="imagem--usuario">
+        <img class="imagem--usuario" id="ellipse">
         <div class="forma2"></div>
 
     </header>
@@ -91,14 +90,14 @@
                         </div>
                     </form>
 
-                    <button class="botao" type="button" name="botao" id="btn-editar">Editar</button>
+                    <button class="botao btn-verde" type="button" name="botao" id="btn-editar">Editar</button>
                 </section>
             </div>
         </article>
     </main>
 
     <section id="alterna-titulo">
-        <p class="abc"><a class="btn btn-texto btn-adicionar" href="animal.html">+ Adicionar um animal</a></p>
+        <p class="paragraph--add_animal" id="paragraph--grupo"><a class="btn btn-texto btn-adicionar btn-verde" href="animal.html">+ Adicionar animal</a></p>
         <div class="catalogo" id="catalogo"></div>
     </section></p>
 
