--- a/html/register.html
+++ b/html/register.html
@@ -91,6 +91,8 @@
                         id="confirmaSenha" name="confirmaSenha" required>
 
                          <span data-alerta class="alerta"></span>
+
+                         <p class="campo__link"><a class="link_redireciona" href="login.html">Já possui uma conta? Faça login.</a></p>
                     </div>
 
                 </form>
