--- a/html/login.html
+++ b/html/login.html
@@ -64,8 +64,7 @@
                          id="senha" name="senha" pattern="^([\w\da-zA-Z!@#$%&*+-._]{6,})" required>
 
                          <span data-alerta class="alerta"></span>
-
-                        <p><a class="esqueci_senha" href="#">Esqueci minha senha.</a></p>
+                        <p class="campo__link"><a class="link_redireciona" href="register.html">Não possui uma conta? Cadastre-se.</a></p>
                     </div>
                 </form>
 
