Mudei os icones para para o icone de menu hamburguer

--- a/html/animal.html
+++ b/html/animal.html
@@ -24,10 +24,9 @@
                 <div  class="navegacao__imagem--logo"><img src="../image/Logo.png"></div>
 
                 <ul class="navegacao__lista">
-
-                    <li class="item"><a class="item__imagem--casa" href="inicio.html"><img src="../image/Casa.png" alt="Botão para voltar ao início da página"></a></li>
-                    <li class="item"><a class="item__imagem--mensagem menu_hamburguer"><img class="menu_hamburguer" src="../image/Mensagens.png"></a></li>
-
+                    <li class="item">
+                        <span class="material-symbols-rounded menu_hamburguer">menu</span>
+                    </li>
                 </ul>
             </div>
         </nav>
