Arrumei uma nova imagem para aparecer quando o usuario estiver sem foto de perfil. Coloquei a organização dos botoes no quisito javascript e html que estavam na pagina de animal na pagina de perfil

--- a/html/animal.html
+++ b/html/animal.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@40,300,0,0" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@40,300,0,0"/>
     <link rel="stylesheet" href="../css/page/style_animal.css">
     <title class="pagina" aria-valuetext="perfil">animal</title>
 </head>
@@ -171,8 +171,10 @@
                         </div>
                     </form>
 
-                    <button class="botao btn-verde" type="submit" name="botao" id="btn-salvar">Salvar</button>
-                    <button class="botao" name="botao" id="btn-voltar">Cancelar</button>
+                    <div class="grupo_botao">
+                        <button class="botao botao_flex-grow" name="botao" id="btn-voltar">Cancelar</button>
+                        <button class="botao btn-verde botao_flex-grow salvar" type="submit" name="botao" id="btn-salvar">Salvar</button>
+                    </div>
                 </section>
             </div>
         </article>
