--- a/html/edit_profile.html
+++ b/html/edit_profile.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@40,300,0,0"/>
     <link rel="stylesheet" href="../css/page/style_edit_profile.css">
     <title class="pagina" aria-valuetext="perfil">perfil</title>
 </head>
@@ -23,18 +24,36 @@
                 <div  class="navegacao__imagem--logo"><img src="../image/Logo.png"></div>
 
                 <ul class="navegacao__lista">
-
-                    <li class="item"><a class="item__imagem--casa" href="inicio.html"><img src="../image/Casa.png" alt="Botão para voltar ao início da página"></a></li>
-                    <li class="item"><a class="item__imagem--mensagem" href="#"><img src="../image/Mensagens.png"></a></li>
-
+                    <li class="item">
+                        <span class="material-symbols-rounded menu_hamburguer">menu</span>
+                    </li>
                 </ul>
             </div>
         </nav>
 
+        <dialog class="dialogo--menu">
+            <div class="modal_cabecalho">
+                <span class="material-symbols-rounded arrow_back" id="modal_close--menu">
+                    arrow_back_ios
+                    </span>
+                <h1 class="modal__title--menu">Menu</h1>
+            </div>
+            <ul id="modal_lista--menu">
+                <li class="item_menu">
+                    <a href="animals.html">Animais para adoção</a>
+                </li>
+                <li class="item_menu">
+                    <a href="profile.html">Perfil</a>
+                </li>
+                <li class="item_menu menu_sair">
+                    Sair
+                </li>
+            </ul>
+        </dialog>
+
         <div class="forma2"></div>
     </header>
     
-
     </main>
         <article class="conteiner">
             <div>
@@ -104,9 +123,11 @@
                         </div>
                     </form>
 
-                    <button class="botao btn-verde" type="submit" name="botao" id="btn-salvar">Salvar</button>
-                    <button class="botao" name="botao" id="btn-voltar">Cancelar</button>
-                    <button class="botao" type="button" name="botao" id="btn-deletar">Excluir</button>
+                    <div class="grupo_botao">
+                        <button class="botao botao_flex-grow" name="botao" id="btn-voltar">Cancelar</button>
+                        <button class="botao btn-verde botao_flex-grow salvar" type="submit" name="botao" id="btn-salvar">Salvar</button>
+                    </div>
+                    <p class="deletar" name="botao" id="btn-deletar"><button class="texto_deletar">Excluir</button></p>
                 </section>
             </div>
         </article>
@@ -118,7 +139,7 @@
         </footer>
     </div>
 
-    <dialog>
+    <dialog class="dialogo--alerta">
         <h1 class="modal__title">Atenção</h1>
         <p class="modal__paragraph">Você precisa preencher todas as informações corretamente para salvar.</p>
         <button class="modal__button" id="modal_close">ok</button>
