Adicionei link para redirecionar para a pagina de perfil no icone de perfil. Coloquei a propriedade cursor pointer em alguns elementos das paginas.

--- a/html/animal.html
+++ b/html/animal.html
@@ -51,7 +51,7 @@
             </ul>
         </dialog>
 
-        <img class="imagem--usuario" id="ellipse">
+        <a href="profile.html"><img class="imagem--usuario" id="ellipse"></a>
         <div class="forma2"></div>
     </header>
     
