--- a/html/animals.html
+++ b/html/animals.html
@@ -51,7 +51,7 @@
         </dialog>
 
         <div class="forma2"></div>
-        <img class="imagem--usuario" id="ellipse">
+        <a href="profile.html"><img class="imagem--usuario" id="ellipse"></a>
     </header>
 
     <main>
