Adicionei o campo CEP na entidade animal no backend. Configurei o frontend para que as requisições incluíssem este campo.

--- a/html/animal.html
+++ b/html/animal.html
@@ -188,7 +188,7 @@
 
     </div>
 
-    <dialog class="dialogo--aleta">
+    <dialog class="dialogo--alerta">
         <h1 class="modal__title">Atenção</h1>
         <p class="modal__paragraph">Você precisa preencher todas as informações corretamente para salvar.</p>
         <button class="modal__button" id="modal_close">ok</button>
