Finalizei alguns detalhes da aplicação relacionada ao uso dos recursos no geral.

--- a/html/advertiser_profile.html
+++ b/html/advertiser_profile.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@40,300,0,0"/>
     <link rel="stylesheet" href="../css/page/style_profile.css">
+    <link rel="stylesheet" href="../css/page/style_advertiser.css">
     <title class="pagina" aria-valuetext="perfil">perfil</title>
 </head>
 
@@ -50,11 +51,10 @@
             </ul>
         </dialog>
 
-        <img class="imagem--usuario" id="ellipse">
+        <a href="profile.html"><img class="imagem--usuario" id="ellipse"></a>
         <div class="forma2"></div>
     </header>
     
-
     </main>
         <article class="conteiner">
             <div>
