--- a/html/profile.html
+++ b/html/profile.html
@@ -116,7 +116,7 @@
     </main>
 
     <section id="alterna-titulo">
-        <p class="paragraph--add_animal" id="paragraph--grupo"><a class="btn btn-texto btn-adicionar btn-verde" href="animal.html">+ Adicionar animal</a></p>
+        <p class="paragraph--add_animal" id="paragraph--grupo"><a class="btn btn-texto btn-adicionar btn-verde">+ Adicionar animal</a></p>
         <div class="catalogo" id="catalogo"></div>
     </section></p>
 
