Parte da estilização do cabeçalho finalizada

--- a/html/profile.html
+++ b/html/profile.html
@@ -17,38 +17,82 @@
     
     <header class="cabecalho">
         <div class="imagem--forma1"><img src="../image/Forma 1.png"></div>
-    
+
         <nav class="navegacao--conteiner">
             <div class="navegacao">
                 <div  class="navegacao__imagem--logo"><img src="../image/Logo.png"></div>
 
                 <ul class="navegacao__lista">
+                    <li class="item--nav">
+                        <a class="item__imagem--casa" href="ngo.html">ONGs</a>
+                    </li>
+
                     <li class="item">
-                        <span class="material-symbols-rounded menu_hamburguer">menu</span>
+                        <div class="item--nav">
+                            Animais
+                            <span class="material-symbols-outlined">
+                                expand_more
+                            </span>
+                        </div>
+
+                        <ul>
+                            <li>
+                                <a href="adopt_animals.html">Adotar</a>
+                            </li>
+
+                            <li>
+                                <a href="animals_found.html">Encontrados</a>
+                            </li>
+
+                            <li>
+                                <a href="lost_animals.html">Perdidos</a>
+                            </li>
+                        </ul>
+                    </li>
+
+                    <li class="item">
+                        <div class="item--nav">
+                            Registrar animail
+                            <span class="material-symbols-outlined">
+                                expand_more
+                            </span>
+                        </div>
+
+                        <ul>
+                            <li>
+                                <a href="register_animal_adoption.html">Adoção</a>
+                            </li>
+
+                            <li>
+                                <a href="register_animal_found.html">Encontrei</a>
+                            </li>
+
+                            <li>
+                                <a href="register_animal_lost.html">Perdi</a>
+                            </li>
+                        </ul>
+                    </li>
+
+                    <li class="item--nav">
+                        <a class="" href="inicio.html">
+                            Eventos/Campanhas
+                        </a>
+                    </li>
+
+                    <li class="item--nav">
+                        <a class="" href="inicio.html">
+                            Perfil
+                        </a>
+                    </li>
+
+                    <li class="item--nav">
+                        <a class="" href="inicio.html">
+                            Entrar
+                        </a>
                     </li>
                 </ul>
             </div>
         </nav>
-
-        <dialog class="dialogo--menu">
-            <div class="modal_cabecalho">
-                <span class="material-symbols-rounded arrow_back" id="modal_close--menu">
-                    arrow_back_ios
-                    </span>
-                <h1 class="modal__title--menu">Menu</h1>
-            </div>
-            <ul id="modal_lista--menu">
-                <li class="item_menu">
-                    <a href="animals.html">Animais para adoção</a>
-                </li>
-                <li class="item_menu">
-                    <a href="profile.html">Perfil</a>
-                </li>
-                <li class="item_menu menu_sair">
-                    Sair
-                </li>
-            </ul>
-        </dialog>
 
         <img class="imagem--usuario" id="ellipse">
         <div class="forma2"></div>
