--- a/html/message.html
+++ b/html/message.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <link rel="stylesheet" href="../css/page/style_message.css">
     <title class="pagina" aria-valuetext="mensagem">mensagem</title>
 </head>
@@ -22,16 +23,76 @@
                 <div  class="navegacao__imagem--logo"><img src="../image/Logo.png"></div>
 
                 <ul class="navegacao__lista">
+                    <li class="item--nav">
+                        <a class="item__imagem--casa" href="ngo.html">ONGs</a>
+                    </li>
 
-                    <li class="item"><a class="item__imagem--casa" href="inicio.html"><img src="../image/Casa.png" alt="Botão para voltar ao início da página"></a></li>
-                    <li class="item"><a class="item__imagem--mensagem" href="#"><img src="../image/Mensagens.png"></a></li>
+                    <li class="item_hover--nav">
+                        <div class="item--nav">
+                            Animais
+                            <span class="material-symbols-outlined">
+                                expand_more
+                            </span>
+                        </div>
 
+                        <ul class="aba">
+                            <li>
+                                <a href="adopt_animals.html">Adotar</a>
+                            </li>
+
+                            <li>
+                                <a href="animals_found.html">Encontrados</a>
+                            </li>
+
+                            <li>
+                                <a href="lost_animals.html">Perdidos</a>
+                            </li>
+                        </ul>
+                    </li>
+
+                    <li class="item_hover--nav">
+                        <div class="item--nav">
+                            Registrar animail
+                            <span class="material-symbols-outlined">
+                                expand_more
+                            </span>
+                        </div>
+
+                        <ul class="aba">
+                            <li>
+                                <a href="register_animal_adoption.html">Adoção</a>
+                            </li>
+
+                            <li>
+                                <a href="register_animal_found.html">Encontrei</a>
+                            </li>
+
+                            <li>
+                                <a href="register_animal_lost.html">Perdi</a>
+                            </li>
+                        </ul>
+                    </li>
+
+                    <li class="item--nav">
+                        <a class="" href="inicio.html">
+                            Eventos/Campanhas
+                        </a>
+                    </li>
+
+                    <li class="item--nav">
+                        <a class="" href="inicio.html">
+                            Perfil
+                        </a>
+                    </li>
+
+                    <li class="item--nav">
+                        <a class="" href="inicio.html">
+                            Entrar
+                        </a>
+                    </li>
                 </ul>
             </div>
         </nav>
-
-        <div class="imagem--usuario"></div>
-
     </header>
 
     <div class="forma2"></div>
