--- a/html/register_animal_adoption.html
+++ b/html/register_animal_adoption.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-    <link rel="stylesheet" href="../css/page/style_animal.css">
+    <link rel="stylesheet" href="../css/page/style_register_animal_adoption.css">
     <title class="pagina" aria-valuetext="perfil">animal</title>
 </head>
 
@@ -382,7 +382,6 @@
     <script src="../js/views/MensagemView.js"></script>
     <script src="../js/services/RedirecionaFactory.js"></script>
     <script src="../js/modules/Dialog.js"></script>
-    <script type="module" src="../js/components/imageUser.js"></script>
     <script type="module" src="../js/controllers/profileMessageController.js"></script>
     <script type="module" src="../js/controllers/animalController.js"></script>
     <script type="module" src="../js/entities/AnimalEntities.js"></script>
