--- a/index.html
+++ b/index.html
@@ -9,21 +9,21 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-    <link rel="stylesheet" href="../css/page/style_index.css">
+    <link rel="stylesheet" href="./css/page/style_index.css">
     <title class="pagina" aria-valuetext="index">index</title>
 </head>
 
 <body>
     <header class="cabecalho">
         <div class="imagem--forma1">
-            <img src="../image/Forma 1.png">
+            <img src="./image/Forma 1.png">
         </div>
 
         <nav class="navegacao--conteiner">
             <div class="navegacao">
                 <div class="menu_logo--navegacao">
                     <span class="material-symbols-outlined menu_hamburguer">menu</span>
-                    <a href="./index.html"><div class="navegacao__imagem--logo"><img src="../image/Logo.png"></div></a>
+                    <a href="./index.html"><div class="navegacao__imagem--logo"><img src="./image/Logo.png"></div></a>
                 </div>
 
                 <dialog class="dialogo--menu">
@@ -202,7 +202,7 @@
         <article class="conteiner">
 
             <section class="secao1">
-                <div class="secao1__imagem--logo_azul"><img src="../image/Logo azul.png"></div>
+                <div class="secao1__imagem--logo_azul"><img src="./image/Logo azul.png"></div>
             </section>
 
             <section class="secao2">
