--- a/index.html
+++ b/index.html
@@ -349,5 +349,6 @@
     <script src="./js/services/SenhasProxyFactory.js"></script>
     <script src="./js/services/RedirecionaFactory.js"></script>
     <script type="module" src="./js/controllers/registerControl.js"></script>
+    <script type="module" src="./js/controllers/isLoggedController.js"></script>
 </body>
 </html>
